# ekatra-offline-app-clean

./: .gitignore  README.md  requirements.txt
android/: .gitignore  CONTEXT_MANAGEMENT.md  GOOGLE_PLAY_CHECKLIST.md  GRASSROOTS_PLAN.md  LICENSE  PERFORMANCE_GUIDE.md  build.gradle.kts  download_model.sh  gradlew  gradlew.bat  settings.gradle.kts  setup_and_build.sh
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_old.cpp
android/app/src/main/java/org/ekatra/alfred/: AlfredServer.kt  AlfredServerService.kt  EkatraApp.kt  HostModeActivity.kt  InferenceEngine.kt  LlamaEngine.kt  MainActivity.kt  ModelDownloadActivity.kt  NativeChatActivity.kt  PrivacyConsentActivity.kt  ProfileActivity.kt  SettingsActivity.kt
android/app/src/main/java/org/ekatra/alfred/data/: AppSettings.kt  ModelConfig.kt  RemoteConfigManager.kt
android/app/src/main/java/org/ekatra/alfred/di/: AppModule.kt  DatabaseModule.kt  EngineModule.kt  FirebaseModule.kt
android/app/src/main/java/org/ekatra/alfred/notification/: AppUpdateChecker.kt  EkatraMessagingService.kt
android/app/src/main/java/org/ekatra/alfred/tools/: MathInterceptor.kt  PromptFormatter.kt
android/app/src/main/java/org/ekatra/alfred/ui/: HostModeComposables.kt
android/app/src/main/java/org/ekatra/alfred/viewmodel/: AnalyticsHelper.kt  ChatViewModel.kt  DownloadViewModel.kt  ProfileViewModel.kt  SettingsViewModel.kt
android/app/src/main/java/org/ekatra/alfred/worker/: ModelDownloadWorker.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/fastlane/: README.md
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/fastlane/metadata/android/en-US/changelogs/: 10000.txt  10001.txt  10002.txt  10003.txt  10004.txt
android/firebase/: FIREBASE_SETUP.md  firestore.rules  remote_config_defaults.json
android/scripts/: build.sh  optimize_performance.sh
android/website/: app.html
docs/: README.md
docs/android/: CHANGELOG.md  CLIENT_UI_GUIDE.md  FIREBASE_SETUP_REQUIRED.md  PRIVACY_POLICY.md  README.md  RELEASE_SIGNING.md  ROADMAP.md  UI_DESIGN_BRIEF.md
(+18 files in other folders)
